--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,26 +13,8 @@ title: Stanislas Wiart | Art Direction & Digital Design
       </h1>
     </div>
 
-<!--   <div class="main-carousel">
-    <div class="carousel-cell">
-      <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-        <img src="../images/display-landing-v2-7.jpg" alt="">
-      </div>        
-    </div>
-    <div class="carousel-cell">
-      <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-        <img src="../images/display-landing-v2-10.jpg" alt="">
-      </div>        
-    </div>
-    <div class="carousel-cell">
-      <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-        <img src="../images/display-landing-v2-15.jpg" alt="">
-      </div>        
-    </div>
-  </div> -->
-
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-7.jpg" alt="">
+      <a href="/digdog.html"><img src="../images/display-landing-v2-7.jpg" alt=""></a>
       <div class="desc">
         <h2>Digdog | 2017</h2>
         <h3>Front-end Development | UI Design | Branding</h3>
@@ -41,7 +23,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-9.jpg" alt="">
+      <a href="/bike-it-easy.html"><img src="../images/display-landing-v2-9.jpg" alt=""></a>
       <div class="desc">
         <h2>Bike it Easy | 2017</h2>
         <h3>UI/UX Design | Branding</h3>
@@ -82,19 +64,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
     </div>
   </div>
 </div>
-  <script>
-    AOS.init();
-    $(window).on('load', function() {
-        AOS.refresh();
-    });
-  </script>
-  <script>
-    $('.main-carousel').flickity({
-      // options
-      cellAlign: 'left',
-      contain: true
-    });
-  </script>
+
 
 <!--     <div class="row flexbox">
       <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -102,15 +72,4 @@ title: Stanislas Wiart | Art Direction & Digital Design
 	  <h2 class="works-title" id="subtitle">Digdog scraps Ebay and Discogs</h2>
     <h3 class="works-title-2"><a href="http://www.digdog.in" target="blank"><span class="hvr-pulse-shrink">Visit website</span></a> | Credits: <a href="http://www.tristanbagot.com/" id="cred" target="blank">Tristan Bagot,</a> Sophia Wushanley, Clément Picard-Zivy</h3>
     <h2 class="works-title-2 hvr-pulse-shrink" id="more"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2> -->
-<!--       <div class="row flexbox items">
-        <div class="card">
-          <img src="../images/display-2.png" alt="">
-        </div>
-        <div class="card" id="tab">
-          <img src="../images/display-4.png" alt="">
-        </div>
-        <div class="card">
-          <img src="../images/display-3.png" alt="">
-        </div>
-      </div> -->
 
