--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,3 +1,10 @@
 <!-- <div class="obj">
 	<iframe id="vs_iframe" src="http://www.viewstl.com/?embedded&rotation=no&clean=yes&noborder=yes&orientation=bottom&bgcolor=white&color=gray&url=https://github.com/Stan83W/final-landing/raw/master/source/images/Augustus.stl" style="border:0;margin:0;width:100%;"></iframe>
 </div> -->
+<div class="infos">
+	<div class="desc">
+	  <h3>Art Director working in agencies and freelance for more than five years, I've built my experience across design, luxury and corporate communication.</h3>
+	  <h2>Living and working in Paris, feel free to contact me</h2>
+	  <h2><a href="mailto:stanislas.wiart@gmail.com" class="">stanislas.wiart@gmail.com</a></h2>
+	</div>
+</div>
