added all the pages

--- a/source/digdog.html.erb
+++ b/source/digdog.html.erb
@@ -7,9 +7,14 @@
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-7.jpg" alt="">
 </div>
-<h2 class="desc">Homepage with responsive design</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-10.jpg" alt="">
+</div>
+<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+  <img src="../images/display-landing-v2-18.jpg" alt="">
+</div>
+<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+  <img src="../images/display-landing-v2-17.jpg" alt="">
 </div>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-15.jpg" alt="">
