--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -31,7 +31,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-3.jpg" alt="">
+      <a href="/domestic-landscape.html"><img src="../images/display-landing-v2-3.jpg" alt=""></a>
       <div class="desc">
         <h2>Domestic Landscape | 2017</h2>
         <h3>Digital Design | UI Design | Branding</h3>
@@ -47,7 +47,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       </div>
     </div> -->
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-4.jpg" alt="">
+      <a href="/brain2brain.html"><img src="../images/display-landing-v2-4.jpg" alt=""></a>
       <div class="desc">
         <h2>Brain2brain | 2017</h2>
         <h3>Front-end Development | UI Design | Branding</h3>
@@ -55,7 +55,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
       </div>
     </div>
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-5.jpg" alt="">
+      <a href="/spirienza.html"><img src="../images/display-landing-v2-5.jpg" alt=""></a>
       <div class="desc">
         <h2>Spirienza | 2017</h2>
         <h3>Digital Design | UI Design | Branding</h3>
