refacto try to correct annoying cname

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -57,7 +57,7 @@ img {
   margin: auto;
   margin-bottom: 8%;
   h3 {
-    font-size: 2vw !important;
+    font-size: 2rem !important;
     font-family: "NSB", "NB";
     color: black;
   }
