--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-ok {
   transition: all 0.3s ease;
-  height: 70px;
+  height: 10%;
   padding: 0px 2%;
   display: flex;
   align-items: center;
@@ -8,8 +8,8 @@
   background-color: rgba(0,0,0,0);
 }
 h2 {
-  font-size: 0.8em;
-  letter-spacing: 0.1em;
+  font-size: 1rem;
+  letter-spacing: 0.2rem;
   color: black !important;
   text-transform: uppercase;
 }
@@ -17,5 +17,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 20vh;
+  h2 {
+    padding-left: 10%;
+  }
 }
