font size fixed

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
     	<h1>Art Direction & <br><span
     	   class="txt-rotate"
     	   data-period="2000"
-    	   data-rotate='[ "Digital Design", "Branding", "Web Development", "UI/UX Design" ]'></span>
+    	   data-rotate='[ "UI/UX Design", "Branding", "Web Development" ]'></span>
       </h1>
     </div>
 
@@ -33,7 +33,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <a href="/domestic-landscape.html"><img src="../images/display-landing-v2-3.jpg" alt=""></a>
       <div class="desc">
-        <h2>Domestic Landscape | 2017</h2>
+        <h2>Domestic Landscape | SOON</h2>
         <h3>Digital Design | UI Design | Branding</h3>
         <h2>Post-war italian design online gallery</h2>
       </div>
@@ -57,7 +57,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <a href="/spirienza.html"><img src="../images/display-landing-v2-5.jpg" alt=""></a>
       <div class="desc">
-        <h2>Spirienza | 2017</h2>
+        <h2>Spirienza | SOON</h2>
         <h3>Digital Design | UI Design | Branding</h3>
         <h2>Handmade leather bags & accesories</h2>
       </div>
