--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -12,6 +12,7 @@ h2 {
   letter-spacing: 0.2rem;
   color: black !important;
   text-transform: uppercase;
+  margin-top: 2%;
 }
 .inside-flex {
   display: flex;
