--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 h1 {
   font-family: "NSB", "NB";
-  font-size: 8vw;
-  line-height: 9vw;
+  font-size: 6rem;
+  line-height: 6rem;
   margin-top: 10%;
   margin-bottom: 10%;
   width: 100%;
