added content and pages

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -3,7 +3,7 @@
 </div> -->
 <div class="infos">
 	<div class="desc">
-	  <h3>Art Director working in agencies and freelance<br>six years of experience across design, luxury and corporate communication.</h3>
+	  <h3>Art Director working in agencies and freelance with 7 years of experience across design, luxury and corporate communication.</h3>
 	  <h2>Living and working in Paris, feel free to contact me</h2>
 	  <h2><a href="mailto:stanislas.wiart@gmail.com" class="">stanislas.wiart@gmail.com</a></h2>
 	</div>
