--- a/source/bike-it-easy.html.erb
+++ b/source/bike-it-easy.html.erb
@@ -6,9 +6,23 @@
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-9.jpg" alt="">
 </div>
+<h2 class="sub">Splash screen, homepage and product page mockup</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-16.jpg" alt="">
 </div>
+<h2 class="sub">Bold and simple typographic logo</h2>
+<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+  <img src="../images/display-landing-v2-21.jpg" alt="">
+</div>
+<h2 class="sub">Fresh colours associated to geometric fonts</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-14.jpg" alt="">
+</div>
+<h2 class="sub">Homepage and product page mockup</h2>
+<div class="desc pg-title more">
+  <h2>More projects</h2>
+  <h3><a href="/digdog.html">Digdog</a></h3>
+  <h3><a href="/domestic-landscape.html">Domestic Landscape</a></h3>
+  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
+  <h3><a href="/spirienza.html">Spirienza</a></h3>
 </div>
