--- a/source/brain2brain.html.erb
+++ b/source/brain2brain.html.erb
@@ -6,9 +6,19 @@
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-4.jpg" alt="">
 </div>
+<h2 class="sub">Fully responsive design</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-20.jpg" alt="">
 </div>
+<h2 class="sub">Homepage with banner and cards</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-11.jpg" alt="">
+</div>
+<h2 class="sub">Bold identity based on black and white</h2>
+<div class="desc pg-title more">
+  <h2>More projects</h2>
+  <h3><a href="/digdog.html">Digdog | Front-end | UI</a></h3>
+  <h3><a href="/bike-it-easy.html">Bike It Easy | Branding | UI</a></h3>
+  <h3><a href="/domestic-landscape.html">Domestic Landscape| Branding | UI</a></h3>
+  <h3><a href="/spirienza.html">Spirienza| Branding | UI</a></h3>
 </div>
