--- a/source/digdog.html.erb
+++ b/source/digdog.html.erb
@@ -3,19 +3,32 @@
   <h3>Front-end Development | UI Design | Branding</h3>
   <h2>Track down rare records 24/7</h2>
   <h2>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h2>
+  <h2><a href="http://www.digdog.in" target="blank">Visit Website</a></h2>
 </div>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-7.jpg" alt="">
 </div>
+<h2 class="sub">Homepage with carrousel displaying latests findings</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-10.jpg" alt="">
 </div>
-<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-  <img src="../images/display-landing-v2-18.jpg" alt="">
-</div>
+<h2 class="sub">A minimalist design to emphasize on content</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-17.jpg" alt="">
 </div>
+<h2 class="sub">Result page leading to findings</h2>
+<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+  <img src="../images/display-landing-v2-18.jpg" alt="">
+</div>
+<h2 class="sub">3 steps explaination for user journey</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-15.jpg" alt="">
+</div>
+<h2 class="sub">Fully responsive design</h2>
+<div class="desc pg-title more">
+  <h2>More projects</h2>
+  <h3><a href="/bike-it-easy.html">Bike It Easy</a></h3>
+  <h3><a href="/domestic-landscape.html">Domestic Landscape</a></h3>
+  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
+  <h3><a href="/spirienza.html">Spirienza</a></h3>
 </div>
