--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -56,13 +56,42 @@ img {
   width: 60vw;
   margin: auto;
   margin-bottom: 8%;
+}
+h3 {
+  font-size: 2rem !important;
+  line-height: 2.5rem;
+  font-family: "NSB", "NB";
+  color: black;
+  margin-top: 2%;
+}
+h2 {
+  font-size: 0.8rem;
+  letter-spacing: 0.2rem;
+  color: black !important;
+  text-transform: uppercase;
+  margin-top: 2%;
+}
+.sub {
+  text-align: center;
+  margin-bottom: 5%;
+}
+a {
+  text-decoration: none !important;
+}
+a:hover {
+  cursor: pointer;
+  filter: brightness(0.9);
+  color: rgba(0,0,0,0.7) !important;
+  transition: all 0.5s ease;
+}
+.pg-title {
+  margin-top: 10% !important;
+}
+.more {
   h3 {
-    font-size: 2rem !important;
-    font-family: "NSB", "NB";
-    color: black;
+    margin-bottom: 1.5%;
   }
 }
-
 // #cred:hover {
 //   color: rgba(0,0,0,0.7);
 // }
