added a lot of links and text (marketing)

--- a/source/domestic-landscape.html.erb
+++ b/source/domestic-landscape.html.erb
@@ -6,9 +6,27 @@
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-3.jpg" alt="">
 </div>
+<h2 class="sub">Homepage with products grid</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-13.jpg" alt="">
 </div>
+<h2 class="sub">Product page</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-12.jpg" alt="">
+</div>
+<h2 class="sub">Mobile version</h2>
+<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+  <img src="../images/display-landing-v2-22.jpg" alt="">
+</div>
+<h2 class="sub">Print identity variant</h2>
+<div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+  <img src="../images/display-landing-v2-23.jpg" alt="">
+</div>
+<h2 class="sub">Branding stationery</h2>
+<div class="desc pg-title more">
+  <h2>More projects</h2>
+  <h3><a href="/digdog.html">Digdog</a></h3>
+  <h3><a href="/bike-it-easy.html">Bike It Easy</a></h3>
+  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
+  <h3><a href="/spirienza.html">Spirienza</a></h3>
 </div>
