--- a/source/spirienza.html.erb
+++ b/source/spirienza.html.erb
@@ -6,6 +6,15 @@
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-5.jpg" alt="">
 </div>
+<h2 class="sub">Homepage, product and collection</h2>
 <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
   <img src="../images/display-landing-v2-19.jpg" alt="">
+</div>
+<h2 class="sub">Homepage, product and collection</h2>
+<div class="desc pg-title more">
+  <h2>More projects</h2>
+  <h3><a href="/digdog.html">Digdog</a></h3>
+  <h3><a href="/bike-it-easy.html">Bike It Easy</a></h3>
+  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
+  <h3><a href="/domestic-landscape.html">Domestic Landscape</a></h3>
 </div>
