--- a/source/bike-it-easy.html.erb
+++ b/source/bike-it-easy.html.erb
@@ -21,8 +21,5 @@
 <h2 class="sub">Homepage and product page mockup</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/digdog.html">Digdog</a></h3>
-  <h3><a href="/domestic-landscape.html">Domestic Landscape</a></h3>
-  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
-  <h3><a href="/spirienza.html">Spirienza</a></h3>
+  <h3><a href="/digdog.html">Digdog</a> | <a href="/domestic-landscape.html">Domestic Landscape</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/spirienza.html">Spirienza</a></h3>
 </div>
