--- a/source/domestic-landscape.html.erb
+++ b/source/domestic-landscape.html.erb
@@ -25,8 +25,5 @@
 <h2 class="sub">Branding stationery</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/digdog.html">Digdog</a></h3>
-  <h3><a href="/bike-it-easy.html">Bike It Easy</a></h3>
-  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
-  <h3><a href="/spirienza.html">Spirienza</a></h3>
+  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/spirienza.html">Spirienza</a></h3>
 </div>
