--- a/source/spirienza.html.erb
+++ b/source/spirienza.html.erb
@@ -13,8 +13,5 @@
 <h2 class="sub">Homepage, product and collection</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/digdog.html">Digdog</a></h3>
-  <h3><a href="/bike-it-easy.html">Bike It Easy</a></h3>
-  <h3><a href="/brain2brain.html">Brain2brain</a></h3>
-  <h3><a href="/domestic-landscape.html">Domestic Landscape</a></h3>
+  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/domestic-landscape.html">Domestic Landscape</a></h3>
 </div>
