--- a/source/brain2brain.html.erb
+++ b/source/brain2brain.html.erb
@@ -17,8 +17,5 @@
 <h2 class="sub">Bold identity based on black and white</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/digdog.html">Digdog</a></h3>
-  <h3><a href="/bike-it-easy.html">Bike It Easy</a></h3>
-  <h3><a href="/domestic-landscape.html">Domestic Landscape</a></h3>
-  <h3><a href="/spirienza.html">Spirienza</a></h3>
+  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/domestic-landscape.html">Domestic Landscape</a> | <a href="/spirienza.html">Spirienza</a></h3>
 </div>
