--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -2,6 +2,6 @@
   <h2 class=""><%= link_to "Stanislas Wiart", "index.html" %></h2>
   <div class="inside-flex">
 	  <h2><%= link_to "about", "about.html" %></h2>
-	  <h2><a href="mailto:stanislas.wiart@gmail.com" class="">Contact</a></h2>
+	  <h2 id="pad"><a href="mailto:stanislas.wiart@gmail.com" class="">Contact</a></h2>
   </div>
 </div>
