--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -24,7 +24,7 @@
   color: black;
   opacity: 0.5;
   text-decoration: none;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   padding: 0px 10px 0px 0px;
 }
 .footer-links a:hover {
@@ -33,5 +33,5 @@
 .footer-copyright {
   color: black;
   opacity: 0.5;
-  font-size: 1vw;
+  font-size: 0.8rem;
 }
