--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  h2 {
-    padding-left: 10%;
-  }
+}
+#pad {
+  padding-left: 10%;
 }
