--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
 
 <div class="">
   <div class="">
-    <div class="">
+    <div id="title">
     	<h1>Art Direction & <br><span
     	   class="txt-rotate"
     	   data-period="2000"
