--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,7 +1,21 @@
+h3 {
+  font-size: 2.3rem !important;
+  line-height: 2.8rem;
+  font-family: "NSB", "NB";
+  color: black;
+  margin-top: 2%;
+}
+h2 {
+  font-size: 1.2rem;
+  letter-spacing: 0.3rem;
+  color: black !important;
+  text-transform: uppercase;
+  // margin-top: 2%;
+}
 h1 {
   font-family: "NSB", "NB";
-  font-size: 6rem;
-  line-height: 6rem;
+  font-size: 9rem;
+  line-height: 9rem;
   margin-top: 10%;
   margin-bottom: 10%;
   width: 100%;
@@ -19,20 +33,10 @@ span .text-rotate > .wrap {
 
 .container {
   height: 120vh;
-  // margin: 10px;
   padding: 0;
-}
-.works-title {
-  // position: absolute;
-  text-align: center;
-  width: 70%;
-  margin-left: 15%;
-  margin-right: 15%;
-  margin-bottom: 0.6%;
 }
 .works-title-2 {
   font-size: 1vw !important;
-  // position: absolute;
   text-align: center;
   width: 50%;
   margin-left: 25%;
@@ -57,20 +61,6 @@ img {
   margin: auto;
   margin-bottom: 8%;
 }
-h3 {
-  font-size: 2rem !important;
-  line-height: 2.5rem;
-  font-family: "NSB", "NB";
-  color: black;
-  margin-top: 2%;
-}
-h2 {
-  font-size: 0.8rem;
-  letter-spacing: 0.2rem;
-  color: black !important;
-  text-transform: uppercase;
-  margin-top: 2%;
-}
 .sub {
   text-align: center;
   margin-bottom: 5%;
@@ -92,6 +82,10 @@ a:hover {
     margin-bottom: 1.5%;
   }
   width: 40%;
+}
+#title {
+  width: 95vw;
+  margin: auto;
 }
 // #cred:hover {
 //   color: rgba(0,0,0,0.7);
@@ -128,4 +122,11 @@ a:hover {
 //     font-size: 1vw;
 //     cursor: pointer;
 //   }
+// }
+// .works-title {
+//   text-align: center;
+//   width: 70%;
+//   margin-left: 15%;
+//   margin-right: 15%;
+//   margin-bottom: 0.6%;
 // }
