--- a/source/digdog.html.erb
+++ b/source/digdog.html.erb
@@ -27,5 +27,5 @@
 <h2 class="sub">Fully responsive design</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/domestic-landscape.html">Domestic Landscape</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/spirienza.html">Spirienza</a></h3>
+  <h3><a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/domestic-landscape.html">Domestic Landscape</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/spirienza.html">Spirienza</a> | <a href="/kenzo.html">Kenzo</a></h3>
 </div>
