--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -62,6 +62,14 @@ title: Stanislas Wiart | Art Direction & Digital Design
         <h2>Handmade leather bags & accesories</h2>
       </div>
     </div>
+    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
+      <a href="/kenzo.html"><img src="../images/display-landing-v2-26.jpg" alt=""></a>
+      <div class="desc">
+        <h2>Kenzo | 2013</h2>
+        <h3>Art Direction | Editorial | Graphic Design</h3>
+        <h2>Corporate magazine</h2>
+      </div>
+    </div>
   </div>
 </div>
 
