--- a/source/spirienza.html.erb
+++ b/source/spirienza.html.erb
@@ -1,5 +1,5 @@
 <div class="desc pg-title">
-  <h2>Spirienza | 2017</h2>
+  <h2>Spirienza | SOON</h2>
   <h3>Digital Design | UI Design | Branding</h3>
   <h2>Handmade leather bags & accesories</h2>
 </div>
@@ -13,5 +13,5 @@
 <h2 class="sub">Homepage, product and collection</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/domestic-landscape.html">Domestic Landscape</a></h3>
+  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/domestic-landscape.html">Domestic Landscape</a> | <a href="/kenzo.html">Kenzo</a></h3>
 </div>
