--- a/source/domestic-landscape.html.erb
+++ b/source/domestic-landscape.html.erb
@@ -1,5 +1,5 @@
 <div class="desc pg-title">
-  <h2>Domestic Landscape | 2017</h2>
+  <h2>Domestic Landscape | SOON</h2>
   <h3>Digital Design | UI Design | Branding</h3>
   <h2>Post-war italian design online gallery</h2>
 </div>
@@ -25,5 +25,5 @@
 <h2 class="sub">Branding stationery</h2>
 <div class="desc pg-title more">
   <h2>More projects</h2>
-  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/spirienza.html">Spirienza</a></h3>
+  <h3><a href="/digdog.html">Digdog</a> | <a href="/bike-it-easy.html">Bike It Easy</a> | <a href="/brain2brain.html">Brain2brain</a> | <a href="/spirienza.html">Spirienza</a> | <a href="/kenzo.html">Kenzo</a></h3>
 </div>
