--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.css">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="//cdn.rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
   </head>
   <body>
     <%= partial "layouts/navbar" %>
