--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -13,6 +13,7 @@ var geometry, material, mesh;
 init();
 animate();
 
+
 function init() {
 
 	camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 10 );
@@ -26,7 +27,9 @@ function init() {
 	mesh = new THREE.Mesh( geometry, material );
 	scene.add( mesh );
 
-	renderer = new THREE.WebGLRenderer( { antialias: true } );
+	// renderer = new THREE.WebGLRenderer( { antialias: true } );
+	renderer = new THREE.WebGLRenderer( { alpha: true } );
+	renderer.setClearColor( 0x000000, 0 );
 	renderer.setSize( window.innerWidth, window.innerHeight );
 	document.body.appendChild( renderer.domElement );
 
@@ -42,92 +45,18 @@ function animate() {
 	renderer.render( scene, camera );
 
 }
+
+
+var loader = new THREE.STLLoader();
+ 
+loader.load('../images/Augustus.stl', function (geometry) {
+  var material = new THREE.MeshNormalMaterial()
+  var mesh = new THREE.Mesh(geometry, material)
+  scene.add(mesh)
+})
+
 </script>
-<!-- 
-<script>
 
-            var container, camera, scene, renderer;
-
-            init();
-            animate();
-
-            function init() {
-
-                container = document.createElement( 'div' );
-                document.body.appendChild( container );
-
-                // renderer
-
-                renderer = new THREE.WebGLRenderer( { antialias: true } );
-                renderer.setSize( window.innerWidth, window.innerHeight );
-                container.appendChild( renderer.domElement );
-
-                // scene
-
-                scene = new THREE.Scene();
-
-                // camera
-
-                camera = new THREE.PerspectiveCamera( 35, window.innerWidth / window.innerHeight, 1, 10000 );
-                camera.position.set( 3, 0.5, 3 );
-                scene.add( camera ); // required, because we are adding a light as a child of the camera
-
-                // lights
-
-                scene.add( new THREE.AmbientLight( 0x222222 ) );
-
-                var light = new THREE.PointLight( 0xffffff, 0.8 );
-                camera.add( light );
-
-                // object
-
-                var loader = new THREE.STLLoader();
-                loader.load( './images/Augustus.stl', function ( geometry ) {
-
-                    var material = new THREE.MeshPhongMaterial( { color: 0xff5533 } );
-
-                    var mesh = new THREE.Mesh( geometry, material );
-
-                    scene.add( mesh );
-
-                } );
-
-                window.addEventListener( 'resize', onWindowResize, false );
-
-            }
-
-            function onWindowResize() {
-
-                camera.aspect = window.innerWidth / window.innerHeight;
-
-                camera.updateProjectionMatrix();
-
-                renderer.setSize( window.innerWidth, window.innerHeight );
-
-            }
-
-            function animate() {
-
-                requestAnimationFrame( animate );
-
-                render();
-
-            }
-
-            function render() {
-
-                var timer = Date.now() * 0.0005;
-
-                camera.position.x = Math.cos( timer ) * 5;
-                camera.position.z = Math.sin( timer ) * 5;
-
-                camera.lookAt( scene.position );
-
-                renderer.render( scene, camera );
-
-            }
-
-</script> -->
 
 <div class="infos">
 	<div class="desc">
