no luck with 3d display

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -6,6 +6,57 @@
 <script src="http://threejs.org/build/three.min.js"></script>
 
 <script src="http://threejs.org/examples/js/loaders/STLLoader.js"></script>
+
+<script>
+	// Set up the scene, camera, and renderer as global variables.
+	var scene, camera, renderer;
+
+	init();
+	animate();
+
+	// Sets up the scene.
+	function init() {
+	  // Create the scene and set the scene size.
+	  scene = new THREE.Scene();
+	  var WIDTH = 400,
+	      HEIGHT = 300;
+
+	  // Create a renderer and add it to the DOM.
+	  renderer = new THREE.WebGLRenderer({antialias:true});
+	  renderer.setSize(WIDTH, HEIGHT);
+	  document.body.appendChild(renderer.domElement);
+	  renderer.domElement.id = "context"
+
+	  // Create a camera, zoom it out from the model a bit, and add it to the scene.
+	  camera = new THREE.PerspectiveCamera(45, WIDTH / HEIGHT, 0.1, 20000);
+	  camera.position.set(0,6,0);
+	  scene.add(camera);
+
+	  // Create a light, set its position, and add it to the scene.
+	  var light = new THREE.PointLight(0xffffff);
+	  light.position.set(-100,200,100);
+	  scene.add(light);
+
+	  // Add a white PointLight to the scene.
+	  var loader = new THREE.JSONLoader();
+	  loader.load( '../images/Augustus.stl', function(geometry){
+	    var material = new THREE.MeshLambertMaterial({color: 0x55B663});
+	    mesh = new THREE.Mesh( geometry, material);
+	    scene.add(mesh);
+	  });
+
+	  // Add OrbitControls so that we can pan around with the mouse.
+	  controls = new THREE.OrbitControls(camera, renderer.domElement);
+	}
+
+	// Renders the scene and updates the render as needed.
+	function animate() {
+	  requestAnimationFrame( animate );
+	  renderer.render( scene, camera );
+	  controls.update();
+	}
+	  
+</script>
 <!-- <script>
 var camera, scene, renderer;
 var geometry, material, mesh;
@@ -55,30 +106,6 @@ loader.load('../images/hand.stl', function (geometry) {
 })
 
 </script> -->
-<script src="Babylon.js"></script>
-<script src="babylon.stlFileLoader.js"></script>
-<script>
-	var delayCreateScene = function () {
-	    // Create a scene.
-	    var scene = new BABYLON.Scene(engine);
-
-	    // Create a default skybox with an environment.
-	    var hdrTexture = BABYLON.CubeTexture.CreateFromPrefilteredData("textures/environment.dds", scene);
-	    var currentSkybox = scene.createDefaultSkybox(hdrTexture, true);
-
-	    // Append glTF model to scene.
-	    BABYLON.SceneLoader.Append("scenes/BoomBox/", "BoomBox.gltf", scene, function (scene) {
-	        // Create a default arc rotate camera and light.
-	        scene.createDefaultCameraOrLight(true, true, true);
-
-	        // The default camera looks at the back of the asset.
-	        // Rotate the camera by 180 degrees to the front of the asset.
-	        scene.activeCamera.alpha += Math.PI;
-	    });
-
-	    return scene;
-	};
-</script>
 
 <div class="infos">
 	<div class="desc">
