--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -2,3 +2,13 @@
 	margin-top: 20%;
 	margin-bottom: 20%;
 }
+#context {
+  width: 400px;
+  height: 300px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
