--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -2,13 +2,69 @@
 	margin-top: 20%;
 	margin-bottom: 20%;
 }
-#context {
-  width: 400px;
-  height: 300px;
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+#anim {
+	width: 50%;
+	margin: auto;
+}
+
+@keyframes plasma{
+  0%   { transform : scale(6) translate3d( 20px,0,0); }
+  50%  { transform : scale(1) translate3d(-60px,0,0); }
+  100% { transform : scale(6) translate3d( 20px,0,0); }
+}
+
+.plasma{
+  backface-visibility: hidden;
+  z-index: 20;
+  position      : relative;
+  width         : 250px;
+  height        : 250px;
+  padding       : 0;
+  border-radius : 0%;
+  overflow      : hidden;
+  margin: auto !important;
+
+  .gooey-container {
+    filter        : url(#gooey-plasma);
+    position      : absolute;
+    top           : 50%;
+    left          : 50%;
+    transform     : translate(-50%,-50%);
+    width         : 300px;
+    height        : 300px;
+    padding       : 0;
+    margin        : 0;
+    box-shadow    : 0 0 0 20px black inset;
+    border-radius : 0%;
+    overflow      : hidden;
+    
+    .bubble {
+      display    : block;
+      position   : absolute;
+      top        : 50%;
+      left       : 50%;
+      width      : 100%;
+      text-align : right;
+
+      &:before{
+        content       : "";
+        display       : inline-block;
+        background    : red;
+        width         : 30px;
+        height        : 30px;
+        border-radius : 0%;
+        transform     : scale(6) translate3d(20px,0,0);
+        box-shadow    : 0 0 15px 0 blue inset,
+                        0 0 10px 0 green inset;
+      }
+    }
+    @for $i from 1 through 6 {
+      .bubble:nth-child(#{$i}) {
+        transform : translate(-50%,-50%) rotate(60deg*$i);
+      }
+      .bubble:nth-child(#{$i}):before {
+        animation : plasma 3s+($i/2) linear .25s*$i infinite;
+      }
+    }
+  }
 }
