--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -1,6 +1,7 @@
 .infos {
 	margin-top: 20%;
 	margin-bottom: 20%;
+	z-index: 100;
 }
 #anim {
 	width: 50%;
@@ -34,7 +35,7 @@
     height        : 300px;
     padding       : 0;
     margin        : 0;
-    box-shadow    : 0 0 0 20px black inset;
+    box-shadow    : 0 0 0 20px yellow inset;
     border-radius : 0%;
     overflow      : hidden;
     
@@ -49,12 +50,12 @@
       &:before{
         content       : "";
         display       : inline-block;
-        background    : red;
+        background    : pink;
         width         : 30px;
         height        : 30px;
         border-radius : 0%;
         transform     : scale(6) translate3d(20px,0,0);
-        box-shadow    : 0 0 15px 0 blue inset,
+        box-shadow    : 0 0 15px 0 orange inset,
                         0 0 10px 0 green inset;
       }
     }
