playin around with aos & three.js

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -58,7 +58,7 @@
 	  
 </script> -->
 
-<!-- <script>
+<script>
 var camera, scene, renderer;
 var geometry, material, mesh;
 
@@ -106,8 +106,8 @@ loader.load('../images/hand.stl', function (geometry) {
   scene.add(mesh)
 })
 
-</script> -->
-<div id="anim">
+</script>
+<!-- <div id="anim">
 	<svg width="0" height="0">
 	 <filter id="gooey-plasma">
 	      <feGaussianBlur in="SourceGraphic" stdDeviation="20" result="blur"/>
@@ -125,7 +125,7 @@ loader.load('../images/hand.stl', function (geometry) {
 	  </div>
 	</div>
 	
-</div>
+</div> -->
 
 <div class="infos">
 	<div class="desc">
