--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -4,8 +4,8 @@
 
 
 <script src="http://threejs.org/build/three.min.js"></script>
-
 <script src="http://threejs.org/examples/js/loaders/STLLoader.js"></script>
+<!-- <script src="https://embed.github.com/view/3d/Stan83W/final-landing/blob/master/source/images/Augustus.stl"></script> -->
 
 <!-- <script>
 	// Set up the scene, camera, and renderer as global variables.
@@ -58,7 +58,7 @@
 	  
 </script> -->
 
-<script>
+<!-- <script>
 var camera, scene, renderer;
 var geometry, material, mesh;
 
@@ -106,7 +106,8 @@ loader.load('../images/hand.stl', function (geometry) {
   scene.add(mesh)
 })
 
-</script>
+</script> -->
+
 <!-- <div id="anim">
 	<svg width="0" height="0">
 	 <filter id="gooey-plasma">
