--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,17 +1,68 @@
 ---
-title: Stanislas Wiart | Art Direction & Digital Design
+title: Stanislas Wiart | Branding & Digital Design
 ---
 
 
+<div>
+  
+  
+</div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
 <div class="">
   <div class="">
     <div id="title">
-    	<h1>Art Direction & <br><span
-    	   class="txt-rotate"
-    	   data-period="2000"
-    	   data-rotate='[ "UI/UX Design", "Branding", "Web Development" ]'></span>
-      </h1>
+      <h1>New Website Coming Soon</h1>
     </div>
 
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
@@ -39,14 +90,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
         <h2>Post-war italian design online gallery</h2>
       </div>
     </div>
-<!--     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <img src="../images/display-landing-v2-6.jpg" alt="">
-      <div class="desc">
-        <h2>Newmanity | 2016</h2>
-        <h3>Art Direction | Branding</h3>
-        <h2>Project for a Newmanity App launch poster</h2>
-      </div>
-    </div> -->
+
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <a href="/brain2brain.html"><img src="../images/display-landing-v2-4.jpg" alt=""></a>
       <div class="desc">
@@ -72,13 +116,6 @@ title: Stanislas Wiart | Art Direction & Digital Design
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-
-<!--     <div class="row flexbox">
-      <iframe src="https://player.vimeo.com/video/242470540?autoplay=1&loop=1&color=b3b3b3&title=0&byline=0&portrait=0" width="700" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
-	  <h2 class="works-title" id="subtitle">Digdog scraps Ebay and Discogs</h2>
-    <h3 class="works-title-2"><a href="http://www.digdog.in" target="blank"><span class="hvr-pulse-shrink">Visit website</span></a> | Credits: <a href="http://www.tristanbagot.com/" id="cred" target="blank">Tristan Bagot,</a> Sophia Wushanley, Clément Picard-Zivy</h3>
-    <h2 class="works-title-2 hvr-pulse-shrink" id="more"><a href="http://www.sprintstud.io" target="blank">More projects here</a></h2> -->
 
