--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,17 +1,17 @@
-.navbar-ok {
-  transition: all 0.3s ease;
-  height: 10%;
-  padding: 0px 2%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgba(0,0,0,0);
-}
-.inside-flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-#pad {
-  padding-left: 10%;
-}
+// .navbar-ok {
+//   transition: all 0.3s ease;
+//   height: 10%;
+//   padding: 0px 2%;
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   background-color: rgba(0,0,0,0);
+// }
+// .inside-flex {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
+// #pad {
+//   padding-left: 10%;
+// }
