--- a/source/stylesheets/components/_about.scss
+++ b/source/stylesheets/components/_about.scss
@@ -1,71 +1,71 @@
-.infos {
-	margin-top: 20%;
-	margin-bottom: 20%;
-	z-index: 100;
-}
-#anim {
-	width: 50%;
-	margin: auto;
-}
+// .infos {
+// 	margin-top: 20%;
+// 	margin-bottom: 20%;
+// 	z-index: 100;
+// }
+// #anim {
+// 	width: 50%;
+// 	margin: auto;
+// }
 
-@keyframes plasma{
-  0%   { transform : scale(6) translate3d( 20px,0,0); }
-  50%  { transform : scale(1) translate3d(-60px,0,0); }
-  100% { transform : scale(6) translate3d( 20px,0,0); }
-}
+// @keyframes plasma{
+//   0%   { transform : scale(6) translate3d( 20px,0,0); }
+//   50%  { transform : scale(1) translate3d(-60px,0,0); }
+//   100% { transform : scale(6) translate3d( 20px,0,0); }
+// }
 
-.plasma{
-  backface-visibility: hidden;
-  z-index: 20;
-  position      : relative;
-  width         : 250px;
-  height        : 250px;
-  padding       : 0;
-  border-radius : 0%;
-  overflow      : hidden;
-  margin: auto !important;
+// .plasma{
+//   backface-visibility: hidden;
+//   z-index: 20;
+//   position      : relative;
+//   width         : 250px;
+//   height        : 250px;
+//   padding       : 0;
+//   border-radius : 0%;
+//   overflow      : hidden;
+//   margin: auto !important;
 
-  .gooey-container {
-    filter        : url(#gooey-plasma);
-    position      : absolute;
-    top           : 50%;
-    left          : 50%;
-    transform     : translate(-50%,-50%);
-    width         : 300px;
-    height        : 300px;
-    padding       : 0;
-    margin        : 0;
-    box-shadow    : 0 0 0 20px yellow inset;
-    border-radius : 0%;
-    overflow      : hidden;
+//   .gooey-container {
+//     filter        : url(#gooey-plasma);
+//     position      : absolute;
+//     top           : 50%;
+//     left          : 50%;
+//     transform     : translate(-50%,-50%);
+//     width         : 300px;
+//     height        : 300px;
+//     padding       : 0;
+//     margin        : 0;
+//     box-shadow    : 0 0 0 20px yellow inset;
+//     border-radius : 0%;
+//     overflow      : hidden;
     
-    .bubble {
-      display    : block;
-      position   : absolute;
-      top        : 50%;
-      left       : 50%;
-      width      : 100%;
-      text-align : right;
+//     .bubble {
+//       display    : block;
+//       position   : absolute;
+//       top        : 50%;
+//       left       : 50%;
+//       width      : 100%;
+//       text-align : right;
 
-      &:before{
-        content       : "";
-        display       : inline-block;
-        background    : pink;
-        width         : 30px;
-        height        : 30px;
-        border-radius : 0%;
-        transform     : scale(6) translate3d(20px,0,0);
-        box-shadow    : 0 0 15px 0 orange inset,
-                        0 0 10px 0 green inset;
-      }
-    }
-    @for $i from 1 through 6 {
-      .bubble:nth-child(#{$i}) {
-        transform : translate(-50%,-50%) rotate(60deg*$i);
-      }
-      .bubble:nth-child(#{$i}):before {
-        animation : plasma 3s+($i/2) linear .25s*$i infinite;
-      }
-    }
-  }
-}
+//       &:before{
+//         content       : "";
+//         display       : inline-block;
+//         background    : pink;
+//         width         : 30px;
+//         height        : 30px;
+//         border-radius : 0%;
+//         transform     : scale(6) translate3d(20px,0,0);
+//         box-shadow    : 0 0 15px 0 orange inset,
+//                         0 0 10px 0 green inset;
+//       }
+//     }
+//     @for $i from 1 through 6 {
+//       .bubble:nth-child(#{$i}) {
+//         transform : translate(-50%,-50%) rotate(60deg*$i);
+//       }
+//       .bubble:nth-child(#{$i}):before {
+//         animation : plasma 3s+($i/2) linear .25s*$i infinite;
+//       }
+//     }
+//   }
+// }
