--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,37 +1,37 @@
-.foot {
-  display: flex;
-  justify-content: space-between;
-  width: 30vw;
-}
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 8vh;
-  padding: 0px 2%;
-  color: rgba(0,0,0,0.3);
-  // position: absolute;
-  // right: 0;
-  // bottom: 0;
-  // left: 0;
-  // width: 100%;
-}
-.footer-links {
-  display: flex;
-  align-items: center;
-}
-.footer-links a {
-  color: black;
-  opacity: 0.5;
-  text-decoration: none;
-  font-size: 1.2rem;
-  padding: 0px 10px 0px 0px;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
-.footer-copyright {
-  color: black;
-  opacity: 0.5;
-  font-size: 1.2rem;
-}
+// .foot {
+//   display: flex;
+//   justify-content: space-between;
+//   width: 30vw;
+// }
+// .footer {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   height: 8vh;
+//   padding: 0px 2%;
+//   color: rgba(0,0,0,0.3);
+//   // position: absolute;
+//   // right: 0;
+//   // bottom: 0;
+//   // left: 0;
+//   // width: 100%;
+// }
+// .footer-links {
+//   display: flex;
+//   align-items: center;
+// }
+// .footer-links a {
+//   color: black;
+//   opacity: 0.5;
+//   text-decoration: none;
+//   font-size: 1.2rem;
+//   padding: 0px 10px 0px 0px;
+// }
+// .footer-links a:hover {
+//   opacity: 1;
+// }
+// .footer-copyright {
+//   color: black;
+//   opacity: 0.5;
+//   font-size: 1.2rem;
+// }
