--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -1,7 +1,7 @@
-iframe {
-  height: 100vh;
-}
-body {
-	overflow-x: hidden; 
-	overflow-y: scroll;
-}
+// iframe {
+//   height: 100vh;
+// }
+// body {
+// 	overflow-x: hidden; 
+// 	overflow-y: scroll;
+// }
