--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,132 +1,131 @@
-h3 {
-  font-size: 2.3rem !important;
-  line-height: 2.8rem;
-  font-family: "NSB", "NB";
-  color: black;
-  margin-top: 2%;
-}
-h2 {
-  font-size: 1.2rem;
-  letter-spacing: 0.3rem;
-  color: black !important;
-  text-transform: uppercase;
-  // margin-top: 2%;
-}
-h1 {
-  font-family: "NSB", "NB";
-  font-size: 9rem;
-  line-height: 9rem;
-  margin-top: 10%;
-  margin-bottom: 10%;
-  width: 100%;
-  text-align: center;
-  color: black !important;
-}
-@keyframes blink {  
-  0%   { border-color: rgba(0, 0, 0, 1); }
-  50%  { border-color: rgba(0, 0, 0, 0); }
-  100% { border-color: rgba(0, 0, 0, 1); }
-}
-span .text-rotate > .wrap {
-  animation: border-pulsate 2s infinite;
-}
 
-.container {
-  height: 120vh;
-  padding: 0;
-}
-.works-title-2 {
-  font-size: 1vw !important;
-  text-align: center;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
-  a {
-    text-decoration: none;
-  }
-}
-img {
-  max-width: 100%;
-  padding: 2%;
-}
-#subtitle {
-  // line-height: 2em;
-  span:hover .hvr-pulse-shrink {
-    cursor: pointer;
-  }
-}
-.desc {
-  text-align: center;
-  width: 60vw;
-  margin: auto;
-  margin-bottom: 8%;
-}
-.sub {
-  text-align: center;
-  margin-bottom: 5%;
-}
-a {
-  text-decoration: none !important;
-}
-a:hover {
-  cursor: pointer;
-  filter: brightness(0.9);
-  color: rgba(0,0,0,0.7) !important;
-  transition: all 0.5s ease;
-}
-.pg-title {
-  margin-top: 10% !important;
-}
-.more {
-  h3 {
-    margin-bottom: 1.5%;
-  }
-  width: 40%;
-}
-#title {
-  width: 95vw;
-  margin: auto;
-}
-// #cred:hover {
-//   color: rgba(0,0,0,0.7);
-// }
-// .items {
-//   position: absolute;
-//   text-align: center;
-//   width: 90%;
-//   margin-left: 5%;
-//   margin-right: 5%;
-//   margin-top: 150px;
-// }
-// .flexbox {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   margin: 0 0 0 0;
-//   max-height: 65vh;
-// }
-// .card img {
-//   align-item: center;
-//   filter: drop-shadow(0.15em 0.15em 0.25em rgba(0,0,0,0.25)); 
-// }
-// html {
-//   height: 100%;
-//   box-sizing: border-box;
-// }
-// #home {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// h3 {
+//   font-size: 2.3rem !important;
+//   line-height: 2.8rem;
+//   font-family: "NSB", "NB";
 //   color: black;
-//   margin: auto;
+//   margin-top: 2%;
+// }
+// h2 {
+//   font-size: 1.2rem;
+//   letter-spacing: 0.3rem;
+//   color: black !important;
+//   text-transform: uppercase;
+//   // margin-top: 2%;
+// }
+// h1 {
+//   font-family: "NSB", "NB";
+//   font-size: 9rem;
+//   line-height: 9rem;
+//   margin-top: 10%;
+//   margin-bottom: 10%;
+//   width: 100%;
+//   text-align: center;
+//   color: black !important;
+// }
+// @keyframes blink {  
+//   0%   { border-color: rgba(0, 0, 0, 1); }
+//   50%  { border-color: rgba(0, 0, 0, 0); }
+//   100% { border-color: rgba(0, 0, 0, 1); }
+// }
+// span .text-rotate > .wrap {
+//   animation: border-pulsate 2s infinite;
+// }
+
+// .container {
+//   height: 120vh;
+//   padding: 0;
+// }
+// .works-title-2 {
+//   font-size: 1vw !important;
+//   text-align: center;
+//   width: 50%;
+//   margin-left: 25%;
+//   margin-right: 25%;
 //   a {
-//     color: black;
-//     opacity: 75%;
-//     font-size: 1vw;
+//     text-decoration: none;
+//   }
+// }
+// img {
+//   max-width: 100%;
+//   padding: 2%;
+// }
+// #subtitle {
+//   // line-height: 2em;
+//   span:hover .hvr-pulse-shrink {
 //     cursor: pointer;
 //   }
 // }
-// .works-title {
+// .desc {
 //   text-align: center;
-//   width: 70%;
-//   margin-left: 15%;
-//   margin-right: 15%;
-//   margin-bottom: 0.6%;
+//   width: 60vw;
+//   margin: auto;
+//   margin-bottom: 8%;
+// }
+// .sub {
+//   text-align: center;
+//   margin-bottom: 5%;
+// }
+// a {
+//   text-decoration: none !important;
+// }
+// a:hover {
+//   cursor: pointer;
+//   filter: brightness(0.9);
+//   color: rgba(0,0,0,0.7) !important;
+//   transition: all 0.5s ease;
+// }
+// .pg-title {
+//   margin-top: 10% !important;
+// }
+// .more {
+//   h3 {
+//     margin-bottom: 1.5%;
+//   }
+//   width: 40%;
+// }
+// #title {
+//   width: 95vw;
+//   margin: auto;
 // }
