--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,119 +3,10 @@ title: Stanislas Wiart | Branding & Digital Design
 ---
 
 
-<div>
-  
-  
+<div class="new-nav">
+  <h2 class="new-nav-item">stanislas wiart</h2>
+  <h2 class="new-nav-item">work</h2>
+  <h2 class="new-nav-item">infos</h2>
+  <h2 class="new-nav-item">contact</h2>
+
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-<div class="">
-  <div class="">
-    <div id="title">
-      <h1>New Website Coming Soon</h1>
-    </div>
-
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <a href="/digdog.html"><img src="../images/display-landing-v2-7.jpg" alt=""></a>
-      <div class="desc">
-        <h2>Digdog | 2017</h2>
-        <h3>Front-end Development | UI Design | Branding</h3>
-        <h2>Track down rare records 24/7</h2>
-        <h2>Credits: Tristan Bagot, Sophia Wushanley, Clément Picard-Zivy</h2>
-      </div>
-    </div>
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <a href="/bike-it-easy.html"><img src="../images/display-landing-v2-9.jpg" alt=""></a>
-      <div class="desc">
-        <h2>Bike it Easy | 2017</h2>
-        <h3>UI/UX Design | Branding</h3>
-        <h2>Find a bike in Paris in less than 5mn</h2>
-      </div>
-    </div>
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <a href="/domestic-landscape.html"><img src="../images/display-landing-v2-3.jpg" alt=""></a>
-      <div class="desc">
-        <h2>Domestic Landscape | SOON</h2>
-        <h3>Digital Design | UI Design | Branding</h3>
-        <h2>Post-war italian design online gallery</h2>
-      </div>
-    </div>
-
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <a href="/brain2brain.html"><img src="../images/display-landing-v2-4.jpg" alt=""></a>
-      <div class="desc">
-        <h2>Brain2brain | 2017</h2>
-        <h3>Front-end Development | UI Design | Branding</h3>
-        <h2>Book a freelance developer according to his skills and location</h2>
-      </div>
-    </div>
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <a href="/spirienza.html"><img src="../images/display-landing-v2-5.jpg" alt=""></a>
-      <div class="desc">
-        <h2>Spirienza | SOON</h2>
-        <h3>Digital Design | UI Design | Branding</h3>
-        <h2>Handmade leather bags & accesories</h2>
-      </div>
-    </div>
-    <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
-      <a href="/kenzo.html"><img src="../images/display-landing-v2-26.jpg" alt=""></a>
-      <div class="desc">
-        <h2>Kenzo | 2013</h2>
-        <h3>Art Direction | Editorial | Graphic Design</h3>
-        <h2>Corporate magazine</h2>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-
