--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
     <title><%= current_page.data.title %></title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
-    <%= favicon_tag 'images/favicon.png' %>
+    <%#= favicon_tag 'images/favicon.png' %>
     <meta name="description" content="Art Direction | Branding | Web Development | Digital Design">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.css">
@@ -17,9 +17,9 @@
     <script src="//cdn.rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
   </head>
   <body>
-    <%= partial "layouts/navbar" %>
+    <%#= partial "layouts/navbar" %>
     <%= yield %>
-    <%= partial "layouts/footer" %>
+    <%#= partial "layouts/footer" %>
     <script>
       AOS.init();
       $(window).on('load', function() {
