--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,9 @@ title: Stanislas Wiart | Branding & Digital Design
 
 
 <div class="new-nav">
-  <h2 class="new-nav-item">stanislas wiart</h2>
-  <h2 class="new-nav-item">work</h2>
-  <h2 class="new-nav-item">infos</h2>
-  <h2 class="new-nav-item">contact</h2>
+  <h2 class="new-nav-item"><a href="">stanislas wiart</a></h2>
+  <h2 class="new-nav-item"><a href="">work</a></h2>
+  <h2 class="new-nav-item"><a href="">infos</a></h2>
+  <h2 class="new-nav-item"><a href="">contact</a></h2>
 
 </div>
