--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -9,6 +9,9 @@ h2 {
 	font-size: 8pt;
 	color: black !important;
 }
+a {
+	text-decoration: none !important;
+}
 .new-nav {
 	display: flex;
 	justify-content: center;
@@ -17,7 +20,9 @@ h2 {
 .new-nav-item {
 	width: 25%;
 	text-align: center;
-	margin: 25px !important;
+	margin: 0 !important;
+	padding: 25px;
+	border-right: 1px solid black;
 }
 
 
