--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,5 +8,12 @@ title: Stanislas Wiart | Branding & Digital Design
   <h2 class="new-nav-item"><a href="">work</a></h2>
   <h2 class="new-nav-item"><a href="">infos</a></h2>
   <h2 class="new-nav-item"><a href="">contact</a></h2>
+</div>
+
+<div class="new-header">
+  
+  <img src="images/mockup-6.jpg" alt="" class="header-item">
+  <img src="images/mockup-33.jpg" alt="" class="header-item">
+  <img src="images/mockup-36.jpg" alt="" class="header-item">
 
 </div>
