--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -43,11 +43,18 @@ a {
 	border-right: 1px solid black;
 }
 
-
-
-
-
-
+.new-banner {
+	border-bottom: 1px solid black;
+}
+.banner-text {
+	font-family: "monumentextended" !important;
+	text-transform: uppercase;
+	color: black;
+}
+h1 {
+	margin: 15px 0 !important;
+	font-size: 50px;
+}
 
 
 
