--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -9,4 +9,4 @@ $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
 
-::selection { background: #6E828A; text-shadow: 0.015em 0.015em 0.05em rgba(0,0,0,0.95); color: #6E828A;}
+::selection { background: #f0f; color: #f0f;}
